# sgl-lite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md  build.cmake  sgl.cmake
cmake/: config.h.in
demo/: Makefile  main.c  sgl_port_sdl2.c
source/: lm.cfg  sgl.h  sgl_ascii_consolas24.c  sgl_config.h  sgl_core.c  sgl_core.h  sgl_draw.c  sgl_draw.h  sgl_mm.c  sgl_mm.h  sgl_widget.c  sgl_widget.h
source/core/: build.cmake  lm.cfg  sgl_anim.c  sgl_core.c
source/draw/: sgl_draw_arc.c  sgl_draw_icon.c  sgl_draw_line.c  sgl_draw_ring.c  sgl_draw_text.c
source/fonts/: build.cmake  lm.cfg  sgl_ascii_consolas23.c  sgl_ascii_consolas24.c  sgl_ascii_consolas34.c  sgl_test_font.c
source/include/: sgl_anim.h  sgl_cfgfix.h  sgl_core.h  sgl_draw.h  sgl_font.h  sgl_types.h
source/widgets/: build.cmake  lm.cfg
source/widgets/2dball/: sgl_2dball.h
source/widgets/arc/: sgl_arc.h
source/widgets/button/: sgl_button.c
source/widgets/circle/: sgl_circle.h
source/widgets/icon/: sgl_icon.c
source/widgets/label/: sgl_label.c
source/widgets/led/: sgl_led.c
source/widgets/line/: sgl_line.c  sgl_line.h
source/widgets/rectangle/: sgl_rectangle.h
source/widgets/slider/: sgl_slider.h
source/widgets/textline/: sgl_textline.c
source_back/: sgl_config.h
source_back/core/: sgl_core.c
source_back/draw/: sgl_draw_circle.c  sgl_draw_rect.c
source_back/fonts/: sgl_ascii_consolas14.c
source_back/include/: sgl_core.h  sgl_math.h
source_back/widgets/2dball/: sgl_2dball.c
source_back/widgets/arc/: sgl_arc.c
source_back/widgets/button/: sgl_button.h
source_back/widgets/checkbox/: sgl_checkbox.c
source_back/widgets/circle/: sgl_circle.c
source_back/widgets/dropdown/: sgl_dropdown.c  sgl_dropdown.h
source_back/widgets/label/: sgl_label.c  sgl_label.h
source_back/widgets/progress/: sgl_progress.c  sgl_progress.h
source_back/widgets/rectangle/: sgl_rectangle.c
source_back/widgets/ring/: sgl_ring.c  sgl_ring.h
source_back/widgets/slider/: sgl_slider.c
source_back/widgets/switch/: sgl_switch.c  sgl_switch.h
